<resources>
    <string name="app_name">Bullsort</string>
    <string name="capture">Capture</string>
    <string name="about">About</string>
    <string name="lblStoreId">Store #:</string>
    <string name="txtStoreId">0108</string>
    <string name="finished">Finished</string>
    <string name="barcodes">Barcodes:</string>
    <string name="generate">Generate</string>
    <string name="clear">Clear</string>
    <string name="txtBarcodes" />
    <string name="txtCount">0</string>
    <string name="title_activity_barcodes">You\'re welcome! \😉</string>
    <string name="done">Done!</string>
    <string name="intro">Welcome! This app uses ML Kit to  recognize container numbers, backroom locations, and DPCIs. Work smarter, not harder!</string>
    <string name="poop">It\'s poop!</string>
</resources>