<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ActivityCapture">

    <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="252dp"
        android:layout_height="384dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="257dp"
        android:nextFocusLeft="@id/viewFinder"
        android:nextFocusUp="@id/viewFinder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.camera.view.PreviewView>

    <TextView
        android:id="@+id/lblBarcodes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="489dp"
        android:layout_marginEnd="304dp"
        android:layout_marginBottom="218dp"
        android:labelFor="@id/txtBarcodes"
        android:text="@string/barcodes"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtBarcodes"
        android:layout_width="387dp"
        android:layout_height="114dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="103dp"
        android:background="@android:color/transparent"
        android:enabled="false"
        android:gravity="top|start"
        android:inputType="none"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:textAlignment="viewStart"
        android:textIsSelectable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblBarcodes"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btnGen"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="203dp"
        android:layout_height="74dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="649dp"
        android:layout_marginEnd="204dp"
        android:layout_marginBottom="8dp"
        android:onClick="gotoActivity"
        android:text="@string/generate"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGen2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="200dp"
        android:layout_height="73dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="649dp"
        android:layout_marginBottom="9dp"
        android:onClick="clear"
        android:text="@string/clear"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnGen"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtCount"
        android:layout_width="123dp"
        android:layout_height="78dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="490dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="163dp"
        android:text="@string/txtCount"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblBarcodes"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="132dp"
        android:layout_height="84dp"
        android:layout_marginStart="135dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="647dp"
        android:contentDescription="@string/poop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />
</androidx.constraintlayout.widget.ConstraintLayout>